--- a/src/components/showcase.css
+++ b/src/components/showcase.css
@@ -211,7 +211,3 @@
         justify-content: space-around;
     }
 }
-
-@media (max-width: 768px){
-
-}
